# riscverifier

./: .gitignore  Cargo.toml  LICENSE  README.md
asts/: Cargo.toml
asts/src/: ast.rs  lib.rs  system_model.rs  utils.rs  veriv_ast.rs
asts/src/spec_lang/: riscv_spec_lang.lalrpop  sl_ast.rs  sl_lexer.rs  sl_parser.rs
dwarf_ctx/: Cargo.toml
dwarf_ctx/src/: dwarfreader.rs  lib.rs  utils.rs
dwarf_ctx/src/dwarf_interfaces/: cdwarfinterface.rs
models/: .prelude.ucl.swp  boogieprelude.bpl  inst_macros.ucl  inst_macros32.ucl  prelude.ucl  prelude32.ucl
rv_model/: Cargo.toml
rv_model/src/: lib.rs  system_model.rs
src/: ast.rs  cdwarfinterface.rs  dwarfreader.rs  ir.rs  ir_interface.rs  lib.rs  main.rs  objectdump.pest  objectdumpparser.rs  objectdumpreader.rs  spec_template_generator.rs  spec_template_printer.rs  specreader.rs  system_model.rs  translator.rs  uclidinterface.rs  uclidtranslator.rs  utils.rs  vectre_program_generator.rs
src/datastructures/: cfg.rs
src/disassembler/: disassembler.rs
src/dwarf_interfaces/: cdwarfinterface.rs  mod.rs
src/model_rewriters/: mod.rs  test_pass.rs
src/pest/: objectdump.pest  speclang.pest
src/readers/: disassembler.rs  dwarfreader.rs  mod.rs  objectdumpreader.rs  specreader.rs
src/spec_lang/: mod.rs  riscv_spec_lang.lalrpop  sl_ast.rs  sl_lexer.rs  sl_parser.rs
src/verification_interfaces/: boogieinterface.rs  mod.rs  uclidinterface.rs
utils/: Cargo.toml
utils/src/: constants.rs  helpers.rs
verified/: test-pmp-1.c.ucl
verified_examples/: region_get_addr.rvspec
verified_examples/sm_c/: Makefile  README.md  region_is_napot_post_cond
verified_examples/sm_c/specs/: .test-pmp-set.specs.swp  test-pmp-set.specs
verified_examples/test/: bbl.lds  compile_all_c.sh
verified_examples/test/c/: test-etc.c  test-prototype.c
verified_examples/test/specs/: test-prototype.specs
