[package]
name = "riscverifier"
version = "0.1.0"
authors = ["Kevin Cheang <kcheang@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gimli = "0.19.0"
clap = "2.33.0"
object = "0.15"
memmap = "0.7"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.7.1"
