[package]
name = "riscverifier"
version = "0.1.0"
authors = ["Kevin Cheang <kcheang@berkeley.edu>"]
edition = "2018"

[build-dependencies]
lalrpop = { version = "0.19.0", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.19.0"
regex = "1"
gimli = "0.19.0"
clap = "2.33.0"
object = "0.15"
memmap = "0.7"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.7.1"
pest = "2.0"
pest_derive = "2.0"
topological-sort = "0.0"
