[package]
name = "riscverifier"
version = "0.1.0"
authors = ["Kevin Cheang <kcheang@berkeley.edu>"]
edition = "2018"

[dependencies]
asts = { path = "asts" }
dwarf_ctx = { path = "dwarf_ctx" }
rv_model = { path="rv_model" }
utils = { path="utils" }
regex = "1"

clap = "2.33.0"
object = "0.15"
memmap = "0.7"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.7.1"
pest = "2.0"
pest_derive = "2.0"
topological-sort = "0.0"
